сделал форму футера

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 		</main>
 		<!-- Footer content -->
 		<footer class="footer">
-			<div class="container">
+			<div class="container">				
 				<div class="footer-flex">
 					<div class="footer-contacts-flex">
 						<a class="link logo" href="./index.html">Web<span class="logo-white">Studio</span> </a>
@@ -404,6 +404,23 @@
 								</a>
 							</li>
 						</ul>
+					</div>
+
+					<div class="footer-form">
+						<p class="footer-form-p">Підпишіться на розсилку</p>
+						<div class="footer-form-flex">
+							<form class="footer-form-relativ">
+								<label class="mail">
+									<input type="email" name="email" class="footer-form-email" placeholder="E-mail" />
+								</label>
+								<button type="submit" class="footer-form-button">
+									Підписатися
+									<svg class="footer-form-img" width="24" height="24">
+										<use href="./images/icons.svg#subscribe"></use>
+									</svg>
+								</button>
+							</form>
+						</div>
 					</div>
 				</div>
 			</div>
