откорректировал позицию модалки

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 						<p class="footer-form-p">Підпишіться на розсилку</p>
 						<div class="footer-form-flex">
 							<form class="footer-form-relativ">
-								<label class="mail">
+								<label class="email">
 									<input type="email" name="email" class="footer-form-email" placeholder="E-mail" />
 								</label>
 								<button type="submit" class="footer-form-button">
