сделал форму модалки

--- a/portfolio.html
+++ b/portfolio.html
@@ -257,24 +257,17 @@
 						<address class="footer-contact">
 							<ul class="footer-contact-list list">
 								<li class="footer-contact-item">
-									<a
-										class="footer-contact-link link adress"
-										href="https://goo.gl/maps/CdvJLRiEL6Q8Smko8"
-										target="_blank"
-										rel="noreferrer noopener"
-										>м. Київ, пр-т Лесі Українки, 26</a
-									>
+									<a class="footer-contact-link link adress" href="https://goo.gl/maps/CdvJLRiEL6Q8Smko8"
+										target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a>
 								</li>
-								<li class="footer-contact-item"
-									><a class="footer-contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li
-								>
-								<li class="footer-contact-item"
-									><a class="footer-contact-link link" href="tel:+380961111111">+38 096 111 11 11</a></li
-								>
+								<li class="footer-contact-item"><a class="footer-contact-link link"
+										href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+								<li class="footer-contact-item"><a class="footer-contact-link link" href="tel:+380961111111">+38
+										096 111 11 11</a></li>
 							</ul>
 						</address>
 					</div>
-
+		
 					<div class="footer-social-flex">
 						<p class="footer-social-text">приєднуйтесь</p>
 						<ul class="footer-social-list list">
@@ -285,7 +278,7 @@
 									</svg>
 								</a>
 							</li>
-
+		
 							<li class="footer-social-item">
 								<a class="footer-social-link link" href="">
 									<svg class="footer-social-icon" width="20" height="20">
@@ -293,7 +286,7 @@
 									</svg>
 								</a>
 							</li>
-
+		
 							<li class="footer-social-item">
 								<a class="footer-social-link link" href="">
 									<svg class="footer-social-icon" width="20" height="20">
@@ -301,7 +294,7 @@
 									</svg>
 								</a>
 							</li>
-
+		
 							<li class="footer-social-item">
 								<a class="footer-social-link link" href="">
 									<svg class="footer-social-icon" width="20" height="20">
@@ -310,6 +303,24 @@
 								</a>
 							</li>
 						</ul>
+					</div>
+		
+					<!-- footer form -->
+					<div class="footer-form">
+						<p class="footer-form-p">Підпишіться на розсилку</p>
+						<div class="footer-form-flex">
+							<form class="footer-form-relativ">
+								<label class="email">
+									<input type="email" name="email" class="footer-form-email" placeholder="E-mail" />
+								</label>
+								<button type="submit" class="footer-form-button">
+									Підписатися
+									<svg class="footer-form-img" width="24" height="24">
+										<use href="./images/icons.svg#subscribe"></use>
+									</svg>
+								</button>
+							</form>
+						</div>
 					</div>
 				</div>
 			</div>
