--- a/index.html
+++ b/index.html
@@ -406,6 +406,7 @@
 						</ul>
 					</div>
 
+					<!-- footer form -->
 					<div class="footer-form">
 						<p class="footer-form-p">Підпишіться на розсилку</p>
 						<div class="footer-form-flex">
@@ -427,11 +428,52 @@
 		</footer>
 		<div class="backdrop is-hidden" data-modal>
 			<div class="modal">
-				<button type="button" class="close-btn" data-modal-close>
-					<svg class="client-icon" width="11" height="11">
+				<button type="submit" class="close-btn" data-modal-close>
+					<svg class="modal-icon" width="11" height="11">
 						<use href="./images/icons.svg#close"></use>
 					</svg>
 				</button>
+				<!-- modal form -->
+				<form class="form">
+					<span class="form-title">Залиште свої дані, ми вам передзвонимо</span>
+				
+					<div class="form-field top-title">
+						<label class="form-label" for="name">Ім'я</label>
+						<input class="form-input" type="text" name="name" id="name">
+						<svg class="input-icon" width="18" height="18">
+							<use href="./images/icons.svg#name"></use>
+						</svg>
+					</div>
+					<div class="form-field">
+						<label class="form-label" for="tel">Телефон</label>
+						<input class="form-input" type="tel" name="tel" id="tel">
+						<svg class="input-icon" width="18" height="18">
+							<use href="./images/icons.svg#phone"></use>
+						</svg>
+					</div>
+					<div class="form-field">
+						<label class="form-label" for="email">Пошта</label>
+						<input class="form-input" type="email" name="email" id="email">
+						<svg class="input-icon" width="18" height="18">
+							<use href="./images/icons.svg#mail"></use>
+						</svg>
+					</div>
+					<div class="form-field">
+						<label class="comment-label" for="comment">Коментар</label>
+						<textarea class="comment" name="comment" id="comment" rows="9" placeholder="Введіть текст"></textarea>
+					</div>
+
+					<div class="form-field-check">
+						<label class="policy-label" for="policy"></a>
+							<input class="form-checkbox" type="checkbox" name="policy" id="policy">
+							<span class="icon-check"></span>
+							Соглашаюсь с рассылкой и принимаю <a class="policy-link" href="">Условия договора</a>
+						</label>
+					
+					</div>
+
+					<button class="form-btn" type="submit">Відправити</button>
+				</form>
 			</div>
 		</div>
 		<script src="./js/modal.js"></script>
