--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="uk">
 	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta charset="UTF-8" >
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" >
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 		<title>Студія</title>
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="preconnect" href="https://fonts.googleapis.com" >
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 			rel="stylesheet"
-		/>
+		>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-		/>
-		<link rel="stylesheet" href="./css/styles.css" />
+		>
+		<link rel="stylesheet" href="./css/styles.css" >
 	</head>
 	<body>
 		<!-- Header content -->
@@ -112,15 +112,15 @@
 					<h2 class="section-title">Чим ми займаємося</h2>
 					<ul class="list work-section-list">
 						<li class="work-section-item">
-							<img src="./images/box1.jpg" alt="кодування" width="370" height="294" />
+							<img src="./images/box1.jpg" alt="кодування" width="370" height="294" >
 							<p class="work-text">Десктопні додатки</p>
 						</li>
 						<li class="work-section-item">
-							<img src="./images/box2.jpg" alt="адаптація" width="370" height="294" />
+							<img src="./images/box2.jpg" alt="адаптація" width="370" height="294" >
 							<p class="work-text">Мобільні додатки</p>
 						</li>
 						<li class="work-section-item">
-							<img src="./images/box3.jpg" alt="дизайн" width="370" height="294" />
+							<img src="./images/box3.jpg" alt="дизайн" width="370" height="294" >
 							<p class="work-text">Дизайнерські рішення</p>
 						</li>
 					</ul>
@@ -132,7 +132,7 @@
 					<h2 class="section-title">Наша команда</h2>
 					<ul class="list team-list">
 						<li class="team-item">
-							<img src="./images/img1.jpg" alt="фото Ігоря Дем'яненко" width="270" height="260" />
+							<img src="./images/img1.jpg" alt="фото Ігоря Дем'яненко" width="270" height="260" >
 							<div class="team-workers">
 								<h3 class="team-names">Ігор Дем'яненко</h3>
 								<p class="team-professions" lang="en">Product Designer</p>
@@ -170,7 +170,7 @@
 						</li>
 
 						<li class="team-item">
-							<img src="./images/img2.jpg" alt="фото Ольги Рєпіної" width="270" height="260" />
+							<img src="./images/img2.jpg" alt="фото Ольги Рєпіної" width="270" height="260" >
 							<div class="team-workers">
 								<h3 class="team-names">Ольга Рєпіна</h3>
 								<p class="team-professions" lang="en">Frontend Developer</p>
@@ -208,7 +208,7 @@
 						</li>
 
 						<li class="team-item">
-							<img src="./images/img3.jpg" alt="фото Миколи Тарасова" width="270" height="260" />
+							<img src="./images/img3.jpg" alt="фото Миколи Тарасова" width="270" height="260" >
 							<div class="team-workers">
 								<h3 class="team-names">Микола Тарасов</h3>
 								<p class="team-professions" lang="en">Marketing</p>
@@ -246,7 +246,7 @@
 						</li>
 
 						<li class="team-item">
-							<img src="./images/img4.jpg" alt="фото Михайла Єрмакова" width="270" height="260" />
+							<img src="./images/img4.jpg" alt="фото Михайла Єрмакова" width="270" height="260" >
 							<div class="team-workers">
 								<h3 class="team-names">Михайло Єрмаков</h3>
 								<p class="team-professions" lang="en">UI Designer</p>
@@ -410,9 +410,9 @@
 					<div class="footer-form">
 						<p class="footer-form-p">Підпишіться на розсилку</p>
 						<div class="footer-form-flex">
-							<form class="footer-form-relativ">
+							<form action="" class="footer-form-relativ">
 								<label class="email">
-									<input type="email" name="email" class="footer-form-email" placeholder="E-mail" />
+									<input type="email" name="email" class="footer-form-email" placeholder="E-mail" >
 								</label>
 								<button type="submit" class="footer-form-button">
 									Підписатися
@@ -434,26 +434,26 @@
 					</svg>
 				</button>
 				<!-- modal form -->
-				<form class="form">
+				<form action="" class="form">
 					<span class="form-title">Залиште свої дані, ми вам передзвонимо</span>
 
 					<div class="form-field top-title">
 						<label class="form-label" for="name">Ім'я</label>
-						<input class="form-input" type="text" name="name" id="name" />
+						<input class="form-input" type="text" name="name" id="name" >
 						<svg class="input-icon" width="18" height="18">
 							<use href="./images/icons.svg#name"></use>
 						</svg>
 					</div>
 					<div class="form-field">
 						<label class="form-label" for="tel">Телефон</label>
-						<input class="form-input" type="tel" name="tel" id="tel" />
+						<input class="form-input" type="tel" name="tel" id="tel" >
 						<svg class="input-icon" width="18" height="18">
 							<use href="./images/icons.svg#phone"></use>
 						</svg>
 					</div>
 					<div class="form-field">
 						<label class="form-label" for="email">Пошта</label>
-						<input class="form-input" type="email" name="email" id="email" />
+						<input class="form-input" type="email" name="email" id="email" >
 						<svg class="input-icon" width="18" height="18">
 							<use href="./images/icons.svg#mail"></use>
 						</svg>
@@ -465,7 +465,7 @@
 
 					<div class="form-field-check">
 						<label class="policy-label" for="policy">
-							<input class="form-checkbox" type="checkbox" name="policy" id="policy" />
+							<input class="form-checkbox" type="checkbox" name="policy" id="policy" >
 							<span class="icon-check"></span>
 							Соглашаюсь с рассылкой и принимаю <a class="policy-link" href="">Условия договора</a>
 						</label>
