--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 					<div class="footer-form">
 						<p class="footer-form-p">Підпишіться на розсилку</p>
 						<div class="footer-form-flex">
-							<form action="" class="footer-form-relativ">
+							<form action="#" class="footer-form-relativ">
 								<label class="email">
 									<input type="email" name="email" class="footer-form-email" placeholder="E-mail" >
 								</label>
@@ -434,7 +434,7 @@
 					</svg>
 				</button>
 				<!-- modal form -->
-				<form action="" class="form">
+				<form action="#" class="form">
 					<span class="form-title">Залиште свої дані, ми вам передзвонимо</span>
 
 					<div class="form-field top-title">
